Make sure IO read/write will not occur any error. DataInputStreamEx and DataOutputStreamEx.